# verixa

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  alembic.ini  ops.ps1  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.base.json  turbo.json
.github/workflows/: ci.yml  release.yml
apps/control-plane-api/tests/: __init__.py  test_asgi.py  test_audit.py  test_audit_archive.py  test_control_plane_app.py  test_demo_seed.py  test_envelopes.py  test_handlers.py  test_mtls.py  test_registry.py  test_routes.py  test_routes_bundles.py  test_routes_webhooks.py  test_webhooks.py
apps/control-plane-api/verixa_control_plane/: __init__.py  app.py  asgi.py  audit.py  audit_archive.py  demo_seed.py  envelopes.py  handlers.py  mtls.py  registry.py  routes.py  webhooks.py
apps/control-plane-ui/: next.config.mjs  package.json  playwright.config.ts  tsconfig.e2e.json  tsconfig.json  vitest.config.ts
apps/control-plane-ui/src/app/: layout.tsx  page.tsx
apps/control-plane-ui/src/app/audit/: page.tsx
apps/control-plane-ui/src/components/: design.ts  ui.tsx
apps/control-plane-ui/src/components/__tests__/: design.test.ts
apps/control-plane-ui/src/lib/: api-client.ts  config.ts
apps/control-plane-ui/tests-e2e/: audit.spec.ts  dashboard.spec.ts  decision-detail.spec.ts  dossier-viewer.spec.ts
apps/runtime/tests/: test_runtime_app.py
apps/runtime/verixa_runtime/: __init__.py  app.py  config.py
apps/runtime/verixa_runtime/audit/: __init__.py  emitter.py  verifier.py
apps/runtime/verixa_runtime/crypto/: __init__.py  aes_gcm.py  ed25519.py  hash_chain.py  key_bootstrap.py
apps/runtime/verixa_runtime/db/: __init__.py  audit.py  dossier.py  policy.py  registry.py  replay.py  review.py  tenancy.py
apps/runtime/verixa_runtime/dossier/: __init__.py  manifest.py
apps/runtime/verixa_runtime/evidence/: __init__.py  validator.py
apps/runtime/verixa_runtime/firewall/: __init__.py  allowlist.py  arg_bounds.py
apps/runtime/verixa_runtime/gateway/: __init__.py  auth.py  chat_completions.py  envelopes.py  govern.py  logging.py
apps/runtime/verixa_runtime/policy/: __init__.py  bundle.py  bundle_server.py  cache.py  client.py  signing.py
apps/runtime/verixa_runtime/replay/: __init__.py  bundle.py  minio_store.py  sealer.py  snapshotter.py  store.py
apps/runtime/verixa_runtime/risk/: __init__.py  router.py
apps/runtime/verixa_runtime/triad/: __init__.py  orchestrator.py  protocol.py  reviewer.py
config/: reviewers.yaml.example
deploy/amd-droplet/: README.md  client-baseline.txt
deploy/docker-compose/: docker-compose.yml
deploy/docker-compose/prometheus/: prometheus.yml
deploy/huggingface/: .dockerignore  Dockerfile  README.md  build_space_repo.py
docs/: SBOM.md  openapi.json
docs/00_executive_brief/: EXECUTIVE_BRIEF.md  RACI_OWNERSHIP_MAP.md
docs/00_executive_brief/_backup/: EXECUTIVE_BRIEF.md_20260510-0335.md
docs/01_product_vision/: PRODUCT_VISION.md
docs/02_brd/: BRD.md
docs/02_competitive_landscape/: COMPETITIVE_LANDSCAPE.md
docs/02_use_cases/: USE_CASES.md
docs/03_pricing/: PRICING_AND_COMMERCIAL_MODEL.md
docs/05_use_cases_and_user_stories/: USER_STORIES.md
docs/06_data_model/: DATA_MODEL.md
docs/07_system_architecture/: SYSTEM_ARCHITECTURE.md
docs/07_system_architecture/adr/: ADR-0001-in-memory-stores-for-phase-0.md  ADR-0002-qwen3-06b-reviewer-triad.md  ADR-0003-commit-reveal-protocol-for-triad.md  ADR-0004-ed25519-over-rsa-for-dossier-signing.md  ADR-0005-mermaid-for-diagrams.md  ADR-0006-postgres-audit-ledger-partitioning.md  ADR-0007-spire-workload-attestation-vs-api-keys.md  ADR-0008-vault-vs-cloud-kms-for-key-custody.md  ADR-0009-approval-matrix-routing-rules.md  ADR-0010-vector-index-for-contradiction-detection.md
docs/07_system_architecture/adr/_backup/: README.md_20260511-1210.md
docs/08_api_specification/: API_SPECIFICATION.md
docs/08_api_specification/_backup/: API_STYLE_GUIDE.md_20260511-1201.md
docs/08_regulatory_mapping/: REGULATORY_MAPPING_MATRIX.md
docs/10_build_plan/: BUILD_PLAN.md
docs/11_security_architecture/: SECURITY_ARCHITECTURE.md
docs/11_threat_model/: RISK_REGISTER.md  THREAT_MODEL.md
docs/12_evidence_pack_spec/: EVIDENCE_PACK_SPECIFICATION.md
docs/13_data_protection_and_privacy/: DPIA_TEMPLATE.md
docs/13_sre_and_operations/: SRE_OPERATIONS.md
docs/14_deployment_topology/: DEPLOYMENT_TOPOLOGY.md
docs/14_glossary/: GLOSSARY.md
docs/15_build_plan/: SDK_RELEASE_RUNBOOK.md
docs/16_data_protection_and_privacy/: DATA_PROTECTION_AND_PRIVACY.md
docs/16_testing_and_qa/: NEGATIVE_TEST_PLAN.md  TESTING_AND_QA.md
docs/16_testing_and_qa/_backup/: NEGATIVE_TEST_PLAN.md_20260511-1424.md  NEGATIVE_TEST_PLAN.md_20260511-1607.md
docs/17_incident_response_plan/: INCIDENT_RESPONSE_PLAN.md
docs/17_traceability_matrix/: TRACEABILITY_MATRIX.md
docs/18_sre_and_operations/: CHANGE_MANAGEMENT_PROCESS.md  KPI_AND_METRICS.md  SLO_SLA_SPECIFICATION.md
docs/19_incident_response_plan/: DISASTER_RECOVERY_PLAN.md
docs/22_session_status/: CP_PROGRESS_LEDGER.md  PHASE_ROADMAP_FUTURE.md  README.md  SESSION_EXPORT_2026-05-12.md
load-tests/: README.md
load-tests/baseline/: test_audit_ledger_baseline.py
migrations/: env.py
migrations/versions/: 20260510_1130_baseline_tenancy.py  20260510_1138_registry_schema.py  20260510_1147_policy_schema.py  20260510_1212_audit_schema.py  20260510_1214_replay_schema.py  20260510_1216_review_schema.py  20260510_1220_dossier_schema.py
policies/core/: .manifest  pii_redaction.rego  workflow_role_binding.rego
policies/core/fixtures/: pii_redaction_fixtures.json  workflow_role_binding_fixtures.json
policies/financial-services/: .manifest  beneficiary_verification.rego  transfer_amount_limit.rego
policies/financial-services/fixtures/: beneficiary_verification_fixtures.json  transfer_amount_limit_fixtures.json
sbom/: verixa.cdx.json
tools/: __init__.py  audit_verify.py  openapi_export.py  policy_sign.py  sbom_generate.py  timing_benchmark.py
(+4 files in other folders)
